--- a/index.html
+++ b/index.html
@@ -118,7 +118,14 @@
 
           <input type="submit" value="Submit Questionnaire">
 
-        </div>   
+        </div>
+
+	<footer>
+        <div class="footerDiv">
+          <p class="footerText1">Authors: Saad, Oscar, and Justin</p>
+          <p class="footerText2">Created for SEG 3125 Lab 1</p>
+        </div>
+      </footer>
           
     </form>
 	<script src="index.js"></script>
