added full names and student numbers to footer

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </form>
 	    <footer>
         <div class="footerDiv">
-          <p class="footerText1">Authors: Saad, Oscar, and Justin</p>
+          <p class="footerText1">Authors: Saad Mazhar (300249820), Oscar Law (300306180), and Justin Bushfield (300188318)</p>
           <p class="footerText2">Created for SEG 3125 Lab 1</p>
         </div>
       </footer>
